Cleanup and refactoring

--- a/tests/compound/fulltoc.html
+++ b/tests/compound/fulltoc.html
@@ -1,4 +1,4 @@
-<ul class="toc">
+<ul class="syntex-toc">
 <li><a href="#h1-header">H1 Header</a><ul>
 <li><a href="#h2-header-i">H2 Header I</a><ul>
 <li><a href="#h3-header-i">H3 Header I</a></li>
