--- a/tests/compound/toc.html
+++ b/tests/compound/toc.html
@@ -1,4 +1,4 @@
-<ul class="syntex-toc">
+<ul class="stx-toc">
 <li><a href="#h2-header-i">H2 Header I</a><ul>
 <li><a href="#h3-header-i">H3 Header I</a></li>
 <li><a href="#h3-header-ii">H3 Header II</a></li>
