--- a/tests/compound/autofootnotes.html
+++ b/tests/compound/autofootnotes.html
@@ -1,6 +1,6 @@
 <p>This line contains a footnote.<sup class="fn-ref"><a href="#fn-1">1</a></sup></p>
 <p>This line contains a footnote.<sup class="fn-ref"><a href="#fn-2">2</a></sup></p>
-<dl class="footnotes">
+<dl class="stx-footnotes">
 <dt id="fn-1">1</dt>
 <dd>
 <p>This is footnote 1.</p>
