Refactor newlines in output and update tests

--- a/unittests/block/block-ol.html
+++ b/unittests/block/block-ol.html
@@ -1,13 +1,28 @@
 <ol>
-<li><p>item 1 para 1</p>
-<p>item 1 para 2</p>
+<li>
+<p>
+item 1 para 1
+</p>
+<p>
+item 1 para 2
+</p>
 </li>
-<li><p>item 2</p>
+<li>
+<p>
+item 2
+</p>
 <ol>
-<li>sublist item 1</li>
-<li>sublist item 2</li>
+<li>
+sublist item 1
+</li>
+<li>
+sublist item 2
+</li>
 </ol>
 </li>
-<li><p>item 3</p>
+<li>
+<p>
+item 3
+</p>
 </li>
 </ol>
