--- a/unittests/block/compact-ol.html
+++ b/unittests/block/compact-ol.html
@@ -1,21 +1,47 @@
 <ol>
-<li>apples</li>
-<li>oranges<ol>
-<li>figs</li>
-<li>bananas</li>
+<li>
+apples
+</li>
+<li>
+oranges
+<ol>
+<li>
+figs
+</li>
+<li>
+bananas
+</li>
 </ol>
 </li>
-<li>pears</li>
+<li>
+pears
+</li>
 </ol>
-<p>para</p>
+<p>
+para
+</p>
 <ol>
-<li>apples</li>
-<li>oranges</li>
-<li>pears</li>
+<li>
+apples
+</li>
+<li>
+oranges
+</li>
+<li>
+pears
+</li>
 </ol>
-<p>para</p>
+<p>
+para
+</p>
 <ol start="4">
-<li>apples</li>
-<li>oranges</li>
-<li>pears</li>
+<li>
+apples
+</li>
+<li>
+oranges
+</li>
+<li>
+pears
+</li>
 </ol>
