--- a/unittests/block/compact-ul.html
+++ b/unittests/block/compact-ul.html
@@ -1,9 +1,19 @@
 <ul>
-<li>apples</li>
-<li>oranges<ul>
-<li>figs</li>
-<li>bananas</li>
+<li>
+apples
+</li>
+<li>
+oranges
+<ul>
+<li>
+figs
+</li>
+<li>
+bananas
+</li>
 </ul>
 </li>
-<li>pears</li>
+<li>
+pears
+</li>
 </ul>
