--- a/unittests/block/h1.html
+++ b/unittests/block/h1.html
@@ -1,2 +1,6 @@
-<h1 id="heading">Heading</h1>
-<h1 id="heading-2">Heading</h1>
+<h1 id="heading">
+Heading
+</h1>
+<h1 id="heading-2">
+Heading
+</h1>
