--- a/unittests/block/headings.html
+++ b/unittests/block/headings.html
@@ -1,12 +1,36 @@
-<h1 id="h1-heading">H1 Heading</h1>
-<h2 id="h2-heading">H2 Heading</h2>
-<h3 id="h3-heading">H3 Heading</h3>
-<h4 id="h4-heading">H4 Heading</h4>
-<h5 id="h5-heading">H5 Heading</h5>
-<h6 id="h6-heading">H6 Heading</h6>
-<h1 id="h1-heading-2">H1 Heading</h1>
-<h2 id="h2-heading-2">H2 Heading</h2>
-<h3 id="h3-heading-2">H3 Heading</h3>
-<h4 id="h4-heading-2">H4 Heading</h4>
-<h5 id="h5-heading-2">H5 Heading</h5>
-<h6 id="h6-heading-2">H6 Heading</h6>
+<h1 id="h1-heading">
+H1 Heading
+</h1>
+<h2 id="h2-heading">
+H2 Heading
+</h2>
+<h3 id="h3-heading">
+H3 Heading
+</h3>
+<h4 id="h4-heading">
+H4 Heading
+</h4>
+<h5 id="h5-heading">
+H5 Heading
+</h5>
+<h6 id="h6-heading">
+H6 Heading
+</h6>
+<h1 id="h1-heading-2">
+H1 Heading
+</h1>
+<h2 id="h2-heading-2">
+H2 Heading
+</h2>
+<h3 id="h3-heading-2">
+H3 Heading
+</h3>
+<h4 id="h4-heading-2">
+H4 Heading
+</h4>
+<h5 id="h5-heading-2">
+H5 Heading
+</h5>
+<h6 id="h6-heading-2">
+H6 Heading
+</h6>
