--- a/unittests/block/hr.html
+++ b/unittests/block/hr.html
@@ -1,9 +1,19 @@
-<p>foo</p>
+<p>
+foo
+</p>
 <hr>
-<p>bar</p>
+<p>
+bar
+</p>
 <hr>
-<p>baz</p>
+<p>
+baz
+</p>
 <hr>
-<p>bam</p>
+<p>
+bam
+</p>
 <hr>
-<p>bip</p>
+<p>
+bip
+</p>
