--- a/unittests/compound/autofootnotes.html
+++ b/unittests/compound/autofootnotes.html
@@ -1,14 +1,28 @@
-<p>This line contains a footnote.<sup class="fn-ref"><a href="#fn-1">1</a></sup></p>
-<p>This line contains a footnote.<sup class="fn-ref"><a href="#fn-2">2</a></sup></p>
+<p>
+This line contains a footnote.<sup class="fn-ref"><a href="#fn-1">1</a></sup>
+</p>
+<p>
+This line contains a footnote.<sup class="fn-ref"><a href="#fn-2">2</a></sup>
+</p>
 <dl class="stx-footnotes">
-<dt id="fn-1">1</dt>
+<dt id="fn-1">
+1
+</dt>
 <dd>
-<p>This is footnote 1.</p>
+<p>
+This is footnote 1.
+</p>
 </dd>
-<dt id="fn-2">2</dt>
+<dt id="fn-2">
+2
+</dt>
 <dd>
-<p>This footnote has two paragraphs.
-This is the first.</p>
-<p>And this is the second.</p>
+<p>
+This footnote has two paragraphs.
+This is the first.
+</p>
+<p>
+And this is the second.
+</p>
 </dd>
 </dl>
