--- a/unittests/compound/multi-ul.html
+++ b/unittests/compound/multi-ul.html
@@ -1,10 +1,18 @@
 <ul>
-<li>foo</li>
-<li>bar</li>
+<li>
+foo
+</li>
+<li>
+bar
+</li>
 </ul>
 <ul>
-<li>baz</li>
+<li>
+baz
+</li>
 </ul>
 <ul>
-<li>bam</li>
+<li>
+bam
+</li>
 </ul>
