--- a/unittests/inline/image-with-title.html
+++ b/unittests/inline/image-with-title.html
@@ -1,1 +1,3 @@
-<p><img src="http://example.com" alt="text" title="title"/></p>
+<p>
+<img src="http://example.com" alt="text" title="title"/>
+</p>
