--- a/unittests/inline/link-with-title.html
+++ b/unittests/inline/link-with-title.html
@@ -1,1 +1,3 @@
-<p><a href="http://example.com" title="title text">text</a></p>
+<p>
+<a href="http://example.com" title="title text">text</a>
+</p>
