--- a/unittests/block/definition-list.html
+++ b/unittests/block/definition-list.html
@@ -1,10 +1,18 @@
 <dl>
-<dt>Term 1</dt>
+<dt>
+Term 1
+</dt>
 <dd>
-<p>This is the definition of the term.</p>
+<p>
+This is the definition of the term.
+</p>
 </dd>
-<dt>Term 2</dt>
+<dt>
+Term 2
+</dt>
 <dd>
-<p>This is the definition of the term.</p>
+<p>
+This is the definition of the term.
+</p>
 </dd>
 </dl>
