--- a/unittests/block/h2.html
+++ b/unittests/block/h2.html
@@ -1,2 +1,6 @@
-<h2 id="heading">Heading</h2>
-<h2 id="heading-2">Heading</h2>
+<h2 id="heading">
+Heading
+</h2>
+<h2 id="heading-2">
+Heading
+</h2>
