--- a/unittests/compound/multi-ol.html
+++ b/unittests/compound/multi-ol.html
@@ -1,10 +1,18 @@
 <ol>
-<li>foo</li>
-<li>bar</li>
+<li>
+foo
+</li>
+<li>
+bar
+</li>
 </ol>
 <ol>
-<li>baz</li>
+<li>
+baz
+</li>
 </ol>
 <ol>
-<li>bam</li>
+<li>
+bam
+</li>
 </ol>
