--- a/unittests/inline/ref-image.html
+++ b/unittests/inline/ref-image.html
@@ -1,3 +1,9 @@
-<p><img src="http://example.com" alt="text1"/></p>
-<p><img src="http://example.com" alt="text2" title="optional title"/></p>
-<p><img src="" alt="text3"/></p>
+<p>
+<img src="http://example.com" alt="text1"/>
+</p>
+<p>
+<img src="http://example.com" alt="text2" title="optional title"/>
+</p>
+<p>
+<img src="" alt="text3"/>
+</p>
