--- a/unittests/inline/ref-link.html
+++ b/unittests/inline/ref-link.html
@@ -1,3 +1,9 @@
-<p><a href="http://example.com/1">text1</a></p>
-<p><a href="http://example.com/2" title="title text">text2</a></p>
-<p><a href="#">text3</a></p>
+<p>
+<a href="http://example.com/1">text1</a>
+</p>
+<p>
+<a href="http://example.com/2" title="title text">text2</a>
+</p>
+<p>
+<a href="#">text3</a>
+</p>
