--- a/unittests/shorthand/nl2br.html
+++ b/unittests/shorthand/nl2br.html
@@ -1,16 +1,19 @@
 <p>
 foo<br>
-bar
-</p>
-<p>
+bar<br>
+<br>
 baz
 </p>
+<div>
 <p>
 foo<br>
 bar
 </p>
+</div>
+<div>
 <p>
 foo<br>
 <br>
 bar
 </p>
+</div>
