Revised markup for footnotes

--- a/unittests/compound/autofootnotes.html
+++ b/unittests/compound/autofootnotes.html
@@ -1,29 +1,29 @@
 <p>
-This line contains a footnote.<sup class="footnote-ref" id="footnote-ref-1"><a href="#footnote-1">1</a></sup>
+This line contains a footnote.<sup class="footnote" id="fnref:1"><a href="#fn:1">1</a></sup>
 </p>
 <p>
-This line contains a footnote.<sup class="footnote-ref" id="footnote-ref-2"><a href="#footnote-2">2</a></sup>
+This line contains a footnote.<sup class="footnote" id="fnref:2"><a href="#fn:2">2</a></sup>
 </p>
-<div class="footnotes">
-<div class="footnote" id="footnote-1">
-<div class="footnote-index">
-<a href="#footnote-ref-1">
+<dl class="footnotes">
+<div id="fn:1">
+<dt>
+<a href="#fnref:1">
 1
 </a>
-</div>
-<div class="footnote-body">
+</dt>
+<dd>
 <p>
 This is footnote 1.
 </p>
+</dd>
 </div>
-</div>
-<div class="footnote" id="footnote-2">
-<div class="footnote-index">
-<a href="#footnote-ref-2">
+<div id="fn:2">
+<dt>
+<a href="#fnref:2">
 2
 </a>
-</div>
-<div class="footnote-body">
+</dt>
+<dd>
 <p>
 This footnote has two paragraphs.
 This is the first.
@@ -31,6 +31,6 @@ This is the first.
 <p>
 And this is the second.
 </p>
+</dd>
 </div>
-</div>
-</div>
+</dl>
