--- a/unittests/inline/footnote.html
+++ b/unittests/inline/footnote.html
@@ -1,6 +1,6 @@
 <p>
-<sup class="footnote-ref" id="footnote-ref-123"><a href="#footnote-123">123</a></sup>
+<sup class="footnote" id="fnref:123"><a href="#fn:123">123</a></sup>
 </p>
 <p>
-<sup class="footnote-ref" id="footnote-ref-456"><a href="#footnote-456">456</a></sup>
+<sup class="footnote" id="fnref:456"><a href="#fn:456">456</a></sup>
 </p>
