--- a/unittests/inline/footnote-autonumbered.html
+++ b/unittests/inline/footnote-autonumbered.html
@@ -1,9 +1,9 @@
 <p>
-<sup class="footnote-ref" id="footnote-ref-1"><a href="#footnote-1">1</a></sup>
+<sup class="footnote" id="fnref:1"><a href="#fn:1">1</a></sup>
 </p>
 <p>
-<sup class="footnote-ref" id="footnote-ref-2"><a href="#footnote-2">2</a></sup>
+<sup class="footnote" id="fnref:2"><a href="#fn:2">2</a></sup>
 </p>
 <p>
-<sup class="footnote-ref" id="footnote-ref-3"><a href="#footnote-3">3</a></sup>
+<sup class="footnote" id="fnref:3"><a href="#fn:3">3</a></sup>
 </p>
