Add <div> wrapper for definition list items

--- a/unittests/blocks/dl.html
+++ b/unittests/blocks/dl.html
@@ -1,4 +1,5 @@
 <dl>
+<div>
 <dt>
 Term 1
 </dt>
@@ -7,6 +8,8 @@ Term 1
 This is the definition of the term.
 </p>
 </dd>
+</div>
+<div>
 <dt>
 Term 2
 </dt>
@@ -15,4 +18,5 @@ Term 2
 This is the definition of the term.
 </p>
 </dd>
+</div>
 </dl>
