Add inline footnote references

--- a/unittests/compound/autofootnotes.html
+++ b/unittests/compound/autofootnotes.html
@@ -2,7 +2,7 @@
 This line contains a footnote.<sup class="footnote" id="fnref:1"><a href="#fn:1">1</a></sup>
 </p>
 <p>
-This line contains a footnote.<sup class="footnote" id="fnref:2"><a href="#fn:2">2</a></sup>
+This line contains a footnote <span class="footnote" id="fnref:2"><a href="#fn:2">2</a></span>.
 </p>
 <dl class="footnotes">
 <div id="fn:1">
