--- a/unittests/inline/footnote.html
+++ b/unittests/inline/footnote.html
@@ -2,5 +2,5 @@
 <sup class="footnote" id="fnref:123"><a href="#fn:123">123</a></sup>
 </p>
 <p>
-<sup class="footnote" id="fnref:456"><a href="#fn:456">456</a></sup>
+<span class="footnote" id="fnref:456"><a href="#fn:456">456</a></span>
 </p>
