--- a/unittests/inline/footnote-autonumbered.html
+++ b/unittests/inline/footnote-autonumbered.html
@@ -2,7 +2,7 @@
 <sup class="footnote" id="fnref:1"><a href="#fn:1">1</a></sup>
 </p>
 <p>
-<sup class="footnote" id="fnref:2"><a href="#fn:2">2</a></sup>
+<span class="footnote" id="fnref:2"><a href="#fn:2">2</a></span>
 </p>
 <p>
 <sup class="footnote" id="fnref:3"><a href="#fn:3">3</a></sup>
