Remove deprecated support for inline link and image titles

--- a/unittests/compound/links.html
+++ b/unittests/compound/links.html
@@ -2,7 +2,7 @@
 This paragraph contains a <a href="http://example.com">link</a>.
 </p>
 <p>
-This link has <a href="http://example.com" title="link title">a title</a>.
+This link has <a href="http://example.com">a title</a>.
 </p>
 <p>
 Here's a reference <a href="http://example.com">link</a>.
