--- a/unittests/inline/link-followed-by-bracket.html
+++ b/unittests/inline/link-followed-by-bracket.html
@@ -1,3 +1,3 @@
 <p>
-foo <a href="http://example.com" title="title text">link text</a> (bar baz) bam
+foo <a href="http://example.com">link text</a> (bar baz) bam
 </p>
