--- a/unittests/inline/link-in-bracket.html
+++ b/unittests/inline/link-in-bracket.html
@@ -1,3 +1,3 @@
 <p>
-foo (bar <a href="http://example.com" title="title text">link text</a> baz) bam
+foo (bar <a href="http://example.com">link text</a> baz) bam
 </p>
